# hexlet_django_blog

./: .gitignore  Makefile  README.md  pyproject.toml  views.py
article/: admin.py  forms.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_comment.py  0003_comment_timestamp.py  0004_remove_comment_comment_body_comment_content.py  0005_alter_comment_name.py  0006_rename_article_comment_article_id.py
article/templates/articles/: article.html  comment.html  create.html  index.html  update.html
hexlet_django_blog/: settings.py  urls.py
templates/: about.html  base.html  index.html
