[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["NikolayZemelko <zemelko1989@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
django-bootstrap4 = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
